gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue11097a.go
version https://git-lfs.github.com/spec/v1
oid sha256:46c8d1a9f09a332a721e410fd3d2f96a145d6e9aa8616f6b9bb74afab2c7feaa
size 279
